packages/babylon/test/fixtures/cssx/errors/empty-cssx/actual.js
var answer = 42;
var styles = cssx();

var test = function () {
  return answer;
};